--- a/app/src/main/res/layout/fragment_order_details.xml
+++ b/app/src/main/res/layout/fragment_order_details.xml
@@ -105,21 +105,24 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:text="New" />
+                    android:buttonTint="@color/radio_button_color_selector"
+                    android:text="@string/new_string" />
 
                 <RadioButton
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:text="Pending" />
+                    android:buttonTint="@color/radio_button_color_selector"
+                    android:text="@string/pending" />
 
                 <RadioButton
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:text="Delivered" />
+                    android:buttonTint="@color/radio_button_color_selector"
+                    android:text="@string/delivered" />
 
 
             </RadioGroup>
@@ -130,11 +133,16 @@
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
                 android:layout_marginVertical="40dp"
+                android:text="@string/save"
+                android:textSize="18sp"
+                android:letterSpacing="0"
+                android:textAllCaps="false"
+                android:backgroundTint="@color/emeraldGreen"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rgStatus"
-                tools:text="Done" />
+                app:layout_constraintTop_toBottomOf="@id/rgStatus" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
