--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,14 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Deliveryapp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Deliveryapp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/emeraldGreen</item>
-        <item name="colorSecondaryVariant">@color/emeraldGreen</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorPrimary">@color/emeraldGreen</item>
+        <item name="colorPrimaryVariant">@color/emeraldGreen</item>
+        <item name="colorOnPrimary">@color/creamWhite</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
