Update per Item
- item in room database updates if the status changes

--- a/app/src/main/res/layout/fragment_order_details.xml
+++ b/app/src/main/res/layout/fragment_order_details.xml
@@ -149,7 +149,7 @@
                 android:textAllCaps="false"
                 android:backgroundTint="@color/emeraldGreen"
                 android:textColor="@color/black"
-                android:onClick="@{() -> viewModel.onDoneClicked(item.id)}"
+                android:onClick="@{() -> viewModel.onDoneClicked(item)}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
